分布式演示

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,51 +1,27 @@
-agent.company.id=1012
-project.name=web-h5
-cookie.root.domain=h5-test.baoxianjie.net
-static.upfile.domain=upfile-test.baoxianjie.net
-static.img.domain=img-test.baoxianjie.net
+project.name=web-sharding-demo
+cookie.root.domain=h5-test.csaimall.com
+static.base.service.domain=base-test.csaimall.com
+static.resource.domain=static-test.csaimall.com
 
 static.resource.version=1.0.0
 
-jdbc.logo.port=3306
-jdbc.logo.host=210.73.209.76
+#demo 0
+jdbc.demo0.link=210.73.209.71:3306/demo_ds_0
+jdbc.demo0.username=demo
+jdbc.demo0.password=csai2018
 
-
-#jdbc.logo.database=csaimall_insure_api_db
-#jdbc.logo.username=dbuser_insureapi
-#jdbc.logo.password=A20b1735ZD78sB7z
-
-jdbc.logo.database=csaimall_insure_db
-jdbc.logo.username=dbuser_insure
-jdbc.logo.password=B57e94oD02z3
+#demo 1
+jdbc.demo1.link=210.73.209.71:3306/demo_ds_1
+jdbc.demo1.username=demo
+jdbc.demo1.password=csai2018
 
 #redis
-redis.host=210.73.209.76
+redis.host=210.73.209.71
 redis.port=6379
 redis.auth.password=Csai2017
 
-#callService
-service.hzKey=365042*(@#XC!32
-service.channelId=nqd_xicaiwang2016
-service.channelSecret=bzszZIIrD1U5ogyBRhvroJ29SHdJouIS
-service.webServiceHost=http://210.73.209.73:8383
-#service.webServiceHost=http://service-dev.baoxianjie.net:8686/web-service
-service.hzcallback=http://agent-dev.baoxianjie.net:8888/member.html
-fh.pay.callback=http://h5-test.baoxianjie.net/vehicle/page/finish.do
-wx.pay.callback=http://h5-test.baoxianjie.net/wxpay/callback.do
+zk.servers=210.73.209.71:2181
 
-#wx public platform info
-#wx.public.appid=wxc1bb930496cbf510
-#wx.public.secret=01f0b2787a898f72158e025f206a63c2
-wx.public.appid=wx3798d2edfe9c1fe8
-wx.public.secret=bd86419d09adfc910bb55c9198711503
-
-#sms
-sms.accountsid=8a48b5514c2fd22f014c3b0cd135078f
-sms.authtoken=75728cd5dfc34bbd9de8db364c70d3c1
-sms.url=app.cloopen.com
-sms.port=8883
-sms.appid=8a48b5514d32a2a8014d505c956f1637
-sms.regtemplateid=19918
 
 
 
