--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,40 @@
 			<artifactId>kaptcha</artifactId>
 			<version>0.0.9</version>
 		</dependency>
+		
+		<dependency>
+		  <groupId>com.alibaba</groupId>
+		  <artifactId>dubbo</artifactId>
+		  <version>2.5.7</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.netflix.curator</groupId>
+		    <artifactId>curator-framework</artifactId>
+		    <version>1.3.3</version>
+		    <exclusions>
+		       <exclusion>
+		         <groupId>org.slf4j</groupId>
+		         <artifactId>slf4j-log4j12</artifactId>
+		       </exclusion>
+		       <exclusion>
+		         <groupId>log4j</groupId>
+		         <artifactId>log4j</artifactId>
+		       </exclusion>
+		    </exclusions>
+		</dependency>
+		
+		<dependency>
+		  <groupId>org.apache.curator</groupId>
+		  <artifactId>curator-framework</artifactId>
+		  <version>4.0.0</version>
+		</dependency> 
+		
+		<dependency>
+		  <groupId>org.springframework</groupId>
+		  <artifactId>spring-core</artifactId>
+		  <version>4.3.10.RELEASE</version>
+		</dependency>
 
 	</dependencies>
 	
